spotify formatted excel

--- a/Data/Spotify/spotify-api.ipynb
+++ b/Data/Spotify/spotify-api.ipynb
@@ -14,10 +14,15 @@
     "import spotipy\n",
     "import matplotlib.colors as mcolors\n",
     "import openpyxl\n",
+    "import numpy as np\n",
     "\n",
     "from IPython.display import clear_output\n",
     "from spotipy.oauth2 import SpotifyOAuth\n",
     "from dotenv import load_dotenv\n",
+    "from openpyxl.styles import PatternFill\n",
+    "from openpyxl.styles.differential import DifferentialStyle\n",
+    "from openpyxl.formatting import Rule\n",
+    "from openpyxl.utils.dataframe import dataframe_to_rows\n",
     "\n",
     "pd.options.display.float_format = '{:,.0f}'.format\n",
     "\n",
@@ -129,7 +134,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "c6c264ec",
+   "id": "aaef018e",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -166,7 +171,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "7a6530a5",
+   "id": "7676feb5",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -176,7 +181,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "647d149e",
+   "id": "cd838f07",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -187,11 +192,43 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "7c1d8233",
+   "id": "b8540cd6",
    "metadata": {},
    "outputs": [],
    "source": [
     "combined.to_csv(\"spotify-data.csv\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "e4d3a50d",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# make formatted xlsx\n",
+    "\n",
+    "wb = openpyxl.Workbook()\n",
+    "ws = wb.active\n",
+    "\n",
+    "for r in dataframe_to_rows(combined, index = False, header = True):\n",
+    "    if r != [None]:\n",
+    "        ws.append(r)\n",
+    "        \n",
+    "for key, artist in enumerate(combined.artist.unique()):\n",
+    "    rgb = 0.3 * np.array(mcolors.to_rgb(f'C{key}')) + 0.7 * np.ones(3)\n",
+    "    hex_color = mcolors.to_hex(rgb).lstrip(\"#\")\n",
+    "\n",
+    "    fill = PatternFill(bgColor = hex_color) #, end_color = hex_color, fill_type = 'solid')\n",
+    "    dxf = DifferentialStyle(fill = fill)\n",
+    "    rule = Rule(type = \"containsText\",\n",
+    "                operator = \"equal\",\n",
+    "                text = artist[0:5], \n",
+    "                dxf = dxf)\n",
+    "    ws.conditional_formatting.add('A1:A100', rule)\n",
+    "\n",
+    "ws.auto_filter.ref = ws.calculate_dimension() # add filter\n",
+    "wb.save(\"spotify-data.xlsx\")"
    ]
   }
  ],
