move g trends nb

--- a/Data/Google Trends/google-trends.ipynb
+++ b/Data/Google Trends/google-trends.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "48ddfdad",
+   "id": "98836a26",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -19,7 +19,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "e6a29c29",
+   "id": "0c8cc70c",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -29,7 +29,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "7ea312b0",
+   "id": "7cc1fc0c",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -39,15 +39,18 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b3dc2389",
+   "id": "d9aaaced",
    "metadata": {},
    "outputs": [],
    "source": [
-    "pytrend.build_payload(kw_list=['Aristotle', 'Plato'], timeframe='today 5-y')\n",
+    "# compare to \n",
+    "# https://trends.google.com/trends/explore?date=today%205-y&geo=US&q=aristotle,Plato&hl=en\n",
+    "\n",
+    "pytrend.build_payload(kw_list=['Aristotle', 'Plato'], timeframe='today 5-y', geo = 'US')\n",
     "\n",
     "df = pytrend.interest_over_time()\n",
-    "df.plot(marker = '.')\n",
-    "plt.title(\"Search Trends\")\n",
+    "df.plot(marker = '')\n",
+    "plt.title(\"Search Trends, USA\")\n",
     "plt.ylabel(\"Search Popularity\")\n",
     "\n",
     "for year in range(2018, dt.datetime.today().year + 1):\n",
@@ -55,7 +58,6 @@
     "    # mark summer months\n",
     "    plt.axvspan(dt.datetime(year,5,15), dt.datetime(year, 8, 15), color = 'yellow', alpha = .2)\n",
     "\n",
-    "    # mark\n",
     "    # find thanksgiving\n",
     "    nov = dt.datetime(year, 11, 1)\n",
     "    thursday_count = 0\n",
@@ -66,6 +68,50 @@
     "    thanksgiving_week = nov - dt.timedelta(days = 2), nov + dt.timedelta(days = 2)\n",
     "    \n",
     "    plt.axvspan(*thanksgiving_week, color = 'orange', alpha = 0.2)\n",
+    "    \n",
+    "    # pandemic\n",
+    "    pandemic_peak = dt.datetime(2020, 3, 11), dt.datetime(2020,4,15)\n",
+    "    plt.axvspan(*pandemic_peak, color = 'gray', alpha = 0.3)\n",
+    "\n",
+    "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "f8acab5e",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# compare to \n",
+    "# https://trends.google.com/trends/explore?date=today%205-y&geo=US&q=aristotle,Plato&hl=en\n",
+    "\n",
+    "pytrend.build_payload(kw_list=['Aristotle', 'Plato'], timeframe='today 5-y', geo = 'GB')\n",
+    "\n",
+    "df = pytrend.interest_over_time()\n",
+    "df.plot(marker = '')\n",
+    "plt.title(\"Search Trends, UK\")\n",
+    "plt.ylabel(\"Search Popularity\")\n",
+    "\n",
+    "for year in range(2018, dt.datetime.today().year + 1):\n",
+    "    \n",
+    "    # mark summer months\n",
+    "    plt.axvspan(dt.datetime(year,5,15), dt.datetime(year, 8, 15), color = 'yellow', alpha = .2)\n",
+    "\n",
+    "    # find thanksgiving\n",
+    "    nov = dt.datetime(year, 11, 1)\n",
+    "    thursday_count = 0\n",
+    "    while thursday_count < 4:\n",
+    "        if nov.weekday() == 3:\n",
+    "            thursday_count += 1\n",
+    "        nov += dt.timedelta(days = 1)\n",
+    "    thanksgiving_week = nov - dt.timedelta(days = 2), nov + dt.timedelta(days = 2)\n",
+    "    \n",
+    "    plt.axvspan(*thanksgiving_week, color = 'orange', alpha = 0.2)\n",
+    "    \n",
+    "    # pandemic\n",
+    "    pandemic_peak = dt.datetime(2020, 3, 11), dt.datetime(2020,4,15)\n",
+    "    plt.axvspan(*pandemic_peak, color = 'gray', alpha = 0.3)\n",
     "\n",
     "plt.show()"
    ]
