--- a/Data/NOS/nos.ipynb
+++ b/Data/NOS/nos.ipynb
@@ -52,7 +52,7 @@
     "\n",
     "[Herring 2009](https://doi.org/10.1177/000312240907400203) <br>\n",
     "[Herring 2017](https://doi.org/10.1177/0003122417716611) <br>\n",
-    "[Stojmenovska et al 2017](https://doi.org/10.1177/0003122417714422)"
+    "[Stojmenovska et al 2017](https://doi.org/10.1177/0003122417714422) & [replication files](https://stojmenovska.com/wp-content/uploads/2017/05/rp_2017_stojmenovska_bol_leopold_ASR.zip)"
    ]
   },
   {
