--- a/Notes/75MinutesOfPython.tex
+++ b/Notes/75MinutesOfPython.tex
@@ -7,6 +7,7 @@
 
 \author{Alexander Clark\\ \scalebox{0.7}{Columbia University - Stats 1101}} 
 \title{75 Minutes of Python}
+\date{\semester}
 
 \begin{document}
 \maketitle
