--- a/Notes/tex/bibNotes.bib
+++ b/Notes/tex/bibNotes.bib
@@ -60,7 +60,16 @@ Supplemental
 }
 
 
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+Notes
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
+@misc{clark2023python,
+  title={75 minutes of Python},
+  author={Clark, Alexander},
+  year={2023},
+  url={https://github.com/alexanderthclark/Intro-Stats-2023-Fall/blob/main/Notes/75MinutesOfPython.pdf}
+}
 
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
