--- a/Notes/readings.tex
+++ b/Notes/readings.tex
@@ -1,8 +1,8 @@
 \documentclass[12pt]{article}
 
 \usepackage[utf8]{inputenc}
-\usepackage{mystyle} 
-\usepackage{mycommands}
+\usepackage{tex/mystyle} 
+\usepackage{tex/mycommands}
 \usepackage{tcolorbox}
 \usepackage{pgf,tikz}
 \usepackage{soul}
