--- a/Notes/tex/mystyle.sty
+++ b/Notes/tex/mystyle.sty
@@ -102,7 +102,7 @@ language = Python
     style=apa,
     citestyle=authoryear
     ]{biblatex}
-\addbibresource{bibNotes.bib} %Imports bibliography file
+\addbibresource{tex/bibNotes.bib} %Imports bibliography file
 
 
 % force notes to right
