--- a/Notes/readings.tex
+++ b/Notes/readings.tex
@@ -10,7 +10,10 @@
 \usepackage{parskip}
 \usepackage{scrextend} % for indenting
 %\usepackage{bibentry}
-%\usepackage{listings}
+\usepackage{titlesec}
+
+\titleformat{\section}
+  {\normalfont\fontsize{14}{15}\bfseries}{\thesection}{1em}{}
 
 \usetikzlibrary{automata, positioning}
 
