--- a/Notes/google-sheets-help.tex
+++ b/Notes/google-sheets-help.tex
@@ -31,8 +31,7 @@
 \date{%\vspace{1cm}\begin{center}
 %\end{center}
 %\vspace{1cm}
-\scalebox{.8}{This version: \today}
-}
+\scalebox{.8}{This version: \today} \\  \scalebox{.8}{ \link{https://github.com/alexanderthclark/Intro-Stats-2023-Fall/blob/main/Notes/google-sheets-help.pdf}{Latest version} }  }
 
 % name the list of listings 
 \renewcommand\lstlistlistingname{Code} 
