reorder readings and sheets typo

--- a/Notes/readings.tex
+++ b/Notes/readings.tex
@@ -45,8 +45,9 @@ Below, \scalebox{0.6}{\faToggleOn} indicates a required reading and \scalebox{0.
 
 \section{Types of Data}
 
-\required[Chapter~1.2]{modernstats2021} 
-\indentblock{This establishes vocabulary for tabular data and variables.}
+\required[Chapter~1.2]{modernstats2021} \\
+\optional[Chapter~1.2]{diez2019openintro}
+\indentblock{This establishes vocabulary for tabular data and variables. These readings are interchangeable.}
 
 
 \section{Experiments and Observational Studies}
@@ -111,14 +112,14 @@ Below, \scalebox{0.6}{\faToggleOn} indicates a required reading and \scalebox{0.
 
 \required[Chapter 27]{freedman2007statistics}
 
+\section{$\chi^2$ Hypothesis Testing for Categorical Data}
+
+\required[Chapter 28]{freedman2007statistics}
+
 \section{Computer Skills}
 
 \faToggleOff $\;$ \link{https://github.com/alexanderthclark/Intro-Stats-2023-Fall/blob/main/Notes/75MinutesOfPython.pdf}{My notes}
 \indentblock{These notes will prepare you for using Python in Google Colab.}
-
-\section{$\chi^2$ Hypothesis Testing for Categorical Data}
-
-\required[Chapter 28]{freedman2007statistics}
 
 \section{A Closer Look at Significance}
 
