add Strogatz reading

--- a/Notes/readings.tex
+++ b/Notes/readings.tex
@@ -45,8 +45,7 @@ Below, \scalebox{0.6}{\faToggleOn} indicates a required reading and \scalebox{0.
 
 \section{Types of Data}
 
-\required[Chapter~1.2]{modernstats2021} \\
-\optional[Chapter~1.2]{diez2019openintro}
+\required[Chapter~1.2]{diez2019openintro}
 \indentblock{This establishes vocabulary for tabular data and variables. These readings are interchangeable.}
 
 
@@ -93,8 +92,10 @@ Below, \scalebox{0.6}{\faToggleOn} indicates a required reading and \scalebox{0.
 \section{Probability}\label{sec:prob}
 
 \required[Chapters~13-18]{freedman2007statistics}\\
-\required[Chapter~3]{diez2019openintro}
+\required[Chapter~3.2.7-3.2.8]{diez2019openintro}
 \indentblock{This will supplement for tree diagrams, Bayes' theorem, and some formalities.}
+\required{strogatz2010chances}
+\indentblock{This covers Bayes' theorem and discusses the usefulness of natural frequencies as a solution strategy.}
 
 \section{Sampling}
 
