--- a/Notes/tex/bibNotes.bib
+++ b/Notes/tex/bibNotes.bib
@@ -59,6 +59,13 @@ Supplemental
   url={https://clio.columbia.edu/catalog/6883875}
 }
 
+@article{strogatz2010chances,
+    author    = {Steven Strogatz},
+    title     = {Chances Are},
+    journal   = {New York Times},
+    year      = {2010},
+    url       = {https://archive.nytimes.com/opinionator.blogs.nytimes.com/2010/04/25/chances-are/}
+}
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 Notes
